Comment and Size Image

--- a/Project/intermediate.html
+++ b/Project/intermediate.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+   <!-- Head -->
    <head>
       <!-- Required meta tags -->
       <meta charset="utf-8">
@@ -27,7 +28,9 @@
       </style>
       <title>Hibiscus Lab</title>
    </head>
+   <!-- End Head -->
    <body data-bs-spy="scroll" data-bs-target=".navbar">
+      <!-- Navabr -->
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
          <div class="container">
             <a class="navbar-brand logo-text1" ><a href ="/home"><img src ="../img/favicon.ico"</a>
@@ -56,6 +59,9 @@
             </div>
          </div>
       </nav>
+      <!-- End Navbar -->
+
+      <!-- Section Intermediate -->
       <section id="about">
          <div class="container">
          <div class="row">
@@ -65,10 +71,14 @@
             </div>
          </div>
       </section>
+      <!-- End Section Intermediate -->
+      
+      <!-- Overview -->
       <div class="col-12 p-4">
          <h2>Overview</h2>
          <p>Penetration testing, also known as Pen Test, is the most common technique for testing the security of web applications. Web Application Penetration Testing involves simulating internal or external unauthorised attacks to gain access to sensitive data. With a weekly intensive online workshop, we will go from I don't even know how to install it to actually understanding web application pentest. You will study and practise Web Pentest across multiple modules. Using Portswigger and bWapp labs, we will conduct live pentests and provide step-by-step instruction.</p>
       </div>
+      <!-- Week 1 -->
       <section id="week 1">
          <div class="col-12 p-4">
             <h2 id="workshop-tentative-schedule">Workshop Tentative Schedule</h2>
@@ -92,6 +102,9 @@
             </table>
          </div>
       </section>
+      <!-- End Week 1 -->
+
+      <!-- Week 2 -->
       <section id="week 2">
          <div class="col-12 p-4">
             <h3 id="week-1">Week 2</h3>
@@ -111,6 +124,9 @@
             </table>
          </div>
       </section>
+      <!-- End Week 2 -->
+
+      <!-- Week 3 -->
       <section id="week 3">
          <div class="col-12 p-4">
             <h3 id="week-1">Week 3</h3>
@@ -130,6 +146,9 @@
             </table>
          </div>
       </section>
+      <!-- End Week 3 -->
+
+      <!-- Week 4 -->
       <section id="week 4">
          <div class="col-12 p-4">
             <h3 id="week-1">Week 4</h3>
@@ -149,6 +168,9 @@
             </table>
          </div>
       </section>
+      <!-- End Week 4 -->
+
+      <!-- Week 5 -->
       <section id="week 5">
          <div class="col-12 p-4">
             <h3 id="week-1">Week 5</h3>
@@ -168,6 +190,9 @@
             </table>
          </div>
       </section>
+      <!-- End Week 5 -->
+
+      <!-- Footer -->
       <footer>
          <div class="footer-top">
             <div class="container">
@@ -225,6 +250,8 @@
             </div>
          </div>
       </footer>
+      <!-- Footer -->
+
       <!-- Optional JavaScript; choose one of the two! -->
       <script src="../js/bootstrap.bundle.min.js"></script>
    </body>
