--- a/Project/intro.html
+++ b/Project/intro.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+   <!-- Head -->
    <head>
       <!-- Required meta tags -->
       <meta charset="utf-8">
@@ -11,7 +12,9 @@
       <link rel="stylesheet" href="../css/style.css">
       <title>Hibiscus Lab</title>
    </head>
+   <!-- End Head -->
    <body data-bs-spy="scroll" data-bs-target=".navbar">
+      <!-- Navbar -->
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
          <div class="container">
             <a class="navbar-brand logo-text1" ><a href ="/home"><img src ="../img/favicon.ico"</a>
@@ -40,6 +43,9 @@
             </div>
          </div>
       </nav>
+      <!-- End Navbar -->
+
+      <!-- Section Intro -->
       <section id="about">
          <div class="container">
          <div class="row">
@@ -151,6 +157,9 @@
             <p>You can try to check <a href="https://github.com/sundowndev/hacker-roadmap">hacker roadmap</a></p>
          </div>
       </section>
+      <!-- End Section Intro -->
+
+      <!-- Footer -->
       <footer>
          <div class="footer-top">
             <div class="container">
@@ -208,6 +217,8 @@
             </div>
          </div>
       </footer>
+      <!-- End Footer -->
+
       <!-- Optional JavaScript; choose one of the two! -->
       <script src="../js/bootstrap.bundle.min.js"></script>
    </body>
