--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+   <!-- Head -->
    <head>
       <!-- Required meta tags -->
       <meta charset="utf-8">
@@ -11,10 +12,12 @@
       <link rel="stylesheet" href="css/style.css">
       <title>Hibiscus Lab</title>
    </head>
+   <!-- End Head -->
    <body data-bs-spy="scroll" data-bs-target=".navbar">
+      <!-- Navbar -->
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
          <div class="container">
-            <a class="navbar-brand logo-text1" ><a href ="/home"><img src ="img/favicon.ico"</a>
+            <a class="navbar-brand logo-text1" ><a href ="/home"><img src ="img/favicon.ico"></a>
             <a class="navbar-brand logo-text1" href="/home">Hibiscus</a><a class="navbar-brand logo-text2" href="/home">Lab</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,6 +43,9 @@
             </div>
          </div>
       </nav>
+      <!-- End Navbar -->
+
+      <!-- Our Company -->
       <section id="about">
       <div class="container">
       <div class="row">
@@ -57,6 +63,9 @@
             Our hope to use this critical moment in history to strengthen collaboration and cooperation nationally, regionally, and internationally – public and private sector together. 
          </p>
       </div>
+      <!-- End Our Company -->
+
+      <!-- Vision -->
       <div class="container">
       <div class="row">
          <div class="col-12 section-intro">
@@ -86,6 +95,9 @@
          <h4 class="title-sm mt-4">Deliver</h4>
          <p> deliver a culture of cybersecurity consciousness, where individuals and organizations are motivated and supported to make cybersecurity a top priority in their personal and professional lives.</p>
       </div>
+      <!-- End Vision -->
+
+      <!-- Mission -->
       <div class="container">
          <div class="row">
             <div class="col-12 section-intro">
@@ -115,6 +127,8 @@
             </div>
          </div>
       </div>
+      <!-- End Mission -->
+
       <div class="row">
          <div class="col-12 section-intro">
             <h1>Meet Our Team</h1>
@@ -124,7 +138,7 @@
       <!-- Irfan -->
       <div class="col-lg-3 col-sm-6 team-member">
          <div class="team-member-img">
-            <img src="img/team-3-800x800.jpg" alt="">
+            <img class="team" src="img/team-3-800x800.jpg" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -139,10 +153,11 @@
             <p class="text-white">Irfan is a grit cybersecurity student that possesses a detailed knowledge of security threats and vulnerability. He strives to be a dedicated and knowledgeable cybersecurity professional and red team expert. Irfan's aims to build a new cybersecurity revolution.</p>
          </div>
       </div>
+
       <!-- Abrar -->
       <div class="col-lg-3 col-sm-6 team-member">
          <div class="team-member-img">
-            <img src="img/team6.jpeg" alt="">
+            <img class="team" src="img/team6.jpeg" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -157,10 +172,11 @@
             <p class="text-white">Abrar support the smooth running of offices by carrying out clerical tasks and projects.</p>
          </div>
       </div>
+
       <!-- Nur -->
       <div class="col-lg-3 col-sm-6 team-member even">
          <div class="team-member-img">
-            <img src="img/team-4-800x800.jpeg" alt="">
+            <img class="team" src="img/team-4-800x800.jpeg" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -175,10 +191,11 @@
             <p class="text-white">Nur serves as the brains behind Hibiscus Lab social media platforms. Nur very committed in doing every tasks given.</p>
          </div>
       </div>
+
       <!-- Yasmin -->
       <div class="col-lg-3 col-sm-6 team-member even">
          <div class="team-member-img">
-            <img src="img/team-8-800x800.jpeg" alt="">
+            <img class="team" src="img/team-8-800x800.jpeg" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -193,10 +210,11 @@
             <p class="text-white">Yasmin oversee interdepartmental tutoring through meetings and regular communication among faculty and staff.</p>
          </div>
       </div>
+
       <!-- Naqib -->
       <div class="col-lg-3 col-sm-6 team-member">
          <div class="team-member-img">
-            <img src="img/team3.jpg" alt="">
+            <img class="team" src="img/team3.jpg" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -211,10 +229,11 @@
             <p class="text-white">Naqib serves as Cybersecurity Trainer. Naqib is currently studying for my degree Computer Science in Universiti Sains Islam Malaysia and hold position as President for Information Security and Assurance Club.</p>
          </div>
       </div>
+
       <!-- Amin -->
       <div class="col-lg-3 col-sm-6 team-member">
          <div class="team-member-img">
-            <img src="img/team7.png" alt="">
+            <img class="team" src="img/team7.png" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -229,10 +248,11 @@
             <p class="text-white">Amin is our programming training expert work on designing Jom Belajar Python</p>
          </div>
       </div>
-      <!-- Adin -->
+
+      <!-- Amir Qayyum -->
       <div class="col-lg-3 col-sm-6 team-member">
          <div class="team-member-img">
-            <img src="img/team9.jpeg" alt="">
+            <img class="team" src="img/team9.jpeg" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -247,10 +267,11 @@
             <p class="text-white">Amir is our programming training expert work on designing Jom Belajar Python</p>
          </div>
       </div>
+
       <!-- Damien -->
       <div class="col-lg-3 col-sm-6 team-member">
          <div class="team-member-img">
-            <img src="img/team8.jpg" alt="">
+            <img class="team" src="img/team8.jpg" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -268,7 +289,7 @@
       <!-- Afiq -->
       <div class="col-lg-3 col-sm-6 team-member">
          <div class="team-member-img">
-            <img src="img/team5.jpeg" alt="">
+            <img class="team" src="img/team5.jpeg" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -283,10 +304,11 @@
             <p class="text-white">Afiq manage editorial contents and coordinate delivery of video assets</p>
          </div>
       </div>
+
       <!-- Adin -->
       <div class="col-lg-3 col-sm-6 team-member">
          <div class="team-member-img">
-            <img src="img/team10.jpeg" alt="">
+            <img class="team" src="img/team10.jpg" alt="">
             <div class="social-icons">
                <a href="#"><i class="bx bxl-facebook"></i></a>
                <a href="#"><i class="bx bxl-twitter"></i></a>
@@ -301,6 +323,8 @@
             <p class="text-white">Aizuddin handle the technical aspects of a website, including its performance and capacity.</p>
          </div>
       </div>
+
+      <!-- Footer -->
       <footer>
          <div class="footer-top">
             <div class="container">
@@ -358,6 +382,8 @@
             </div>
          </div>
       </footer>
+      <!-- End Footer -->
+
       <!-- Optional JavaScript; choose one of the two! -->
       <script src="js/bootstrap.bundle.min.js"></script>
    </body>
