--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+   <!-- Head -->
    <head>
       <!-- Required meta tags -->
       <meta charset="utf-8">
@@ -11,7 +12,9 @@
       <link rel="stylesheet" href="css/style.css">
       <title>Hibiscus Lab</title>
    </head>
+   <!-- End Head -->
    <body data-bs-spy="scroll" data-bs-target=".navbar">
+      <!-- Navbar -->
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
          <div class="container">
             <a class="navbar-brand logo-text1" ><a href ="/home"><img src ="img/favicon.ico"</a>
@@ -40,6 +43,9 @@
             </div>
          </div>
       </nav>
+      <!-- End Navbar -->
+
+      <!-- Section Home -->
       <section id="home">
          <div class="container text-center">
             <div class="row justify-content-center">
@@ -51,6 +57,9 @@
             </div>
          </div>
       </section>
+      <!-- End Section Home -->
+
+      <!-- Section Project -->
       <section id="project" class="row g-0 py-0">
          <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
@@ -156,6 +165,9 @@
             </div>
          </div>
       </section>
+      <!-- End Section Project -->
+
+      <!-- Section Roadmap -->
       <section id="roadmap">
          <div class="container">
             <div class="row">
@@ -208,6 +220,9 @@
                   </div>
                </div>
       </section>
+      <!-- End Section Roadmap -->
+
+      <!-- Section Partners -->
       <section id="partners" class="bg-light">
       <div class="row">
       <div class="col-12 section-intro">
@@ -238,6 +253,9 @@
       </div>
       </div>
       </section>
+      <!-- End Section Partners -->
+
+      <!-- Section Testimonials -->
       <section id="testimonials" class="text-center">
       <div class="container">
       <div class="row">
@@ -308,6 +326,9 @@
       </div>
       </div>
       </section>
+      <!-- End Section Testimonials -->
+
+      <!-- Section Contact -->
       <section id="contact">
          <div class="container">
             <div class="row align-items-center">
@@ -334,6 +355,9 @@
             </div>
          </div>
       </section>
+      <!-- End Section Contact -->
+
+      <!-- Section Cta -->
       <section id="cta" class="py-5">
          <div class="container py-4">
             <div class="row justify-content-center">
@@ -346,6 +370,9 @@
             </div>
          </div>
       </section>
+      <!-- End Section Cta -->
+
+      <!-- Footer -->
       <footer>
          <div class="footer-top">
             <div class="container">
@@ -403,6 +430,8 @@
             </div>
          </div>
       </footer>
+      <!-- End Footer -->
+
       <!-- Optional JavaScript; choose one of the two! -->
       <script src="js/bootstrap.bundle.min.js"></script>
    </body>
