--- a/Project/intro.html
+++ b/Project/intro.html
@@ -166,7 +166,7 @@
                <div class="row gy-5">
                   <div class="col-md-4">
                      <h4 class="logo-text">Hibiscus Lab</h4>
-                     <p>SSM ID: 123456789</p>
+                     <p>SSM: 003477397-W</p>
                      <div class="social-icons">
                         <a href="https://www.facebook.com/profile.php?id=100084760095342"><i class="bx bxl-facebook"></i></a>
                         <a href="https://twitter.com/HibiscusLab"><i class="bx bxl-twitter"></i></a>
@@ -197,7 +197,7 @@
                   <div class="col-md-2">
                      <h5 class="title-sm">Reach Out</h5>
                      <div class="footer-links">
-                        <p class="mb">Visit Us: Creative Industry Development Centre Level 16, UNIKL Campus City</p>
+                        <p class="mb">Visit Us: 1609, Student Resource Center, Creative Industry Development Centre Level 16, UNIKL Campus City</p>
                         <p class="mb">Send Email: <a href = "mailto: hello@biscus.my">hello@biscus.my</a></p>
                      </div>
                   </div>
