--- a/Project/intermediate.html
+++ b/Project/intermediate.html
@@ -116,8 +116,8 @@
                   <th>Speaker</th>
                </tr>
                <tr>
-                  <td>09:00 - 11:00</td>
-                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">Recap Previous Workshop</a></td>
+                  <td>09:30 - 11:30</td>
+                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">Cross-Origin Resource Sharing</a></td>
                   <td>2</td>
                   <td>Irfan</td>
                </tr>
