--- a/Project/intermediate.html
+++ b/Project/intermediate.html
@@ -116,9 +116,13 @@
                   <th>Speaker</th>
                </tr>
                <tr>
-                  <td>09:30 - 11:30</td>
+                  <td>09:30 - 10:30</td>
                   <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">Cross-Origin Resource Sharing</a></td>
-                  <td>2</td>
+                  <td>1</td>
+                  <td>Irfan</td>
+                  <td>10:30 - 11:30</td>
+                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">WebSockets</a></td>
+                  <td>1</td>
                   <td>Irfan</td>
                </tr>
             </table>
@@ -139,9 +143,9 @@
                </tr>
                <tr>
                   <td>09:00 - 11:00</td>
-                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">Recap Previous Workshop</a></td>
-                  <td>2</td>
-                  <td>Irfan</td>
+                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">COMING SOON</a></td>
+                  <td>-</td>
+                  <td>-</td>
                </tr>
             </table>
          </div>
@@ -161,9 +165,9 @@
                </tr>
                <tr>
                   <td>09:00 - 11:00</td>
-                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">Recap Previous Workshop</a></td>
-                  <td>2</td>
-                  <td>Irfan</td>
+                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">COMING SOON</a></td>
+                  <td>-</td>
+                  <td>-</td>
                </tr>
             </table>
          </div>
@@ -183,9 +187,9 @@
                </tr>
                <tr>
                   <td>09:00 - 11:00</td>
-                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">Recap Previous Workshop</a></td>
-                  <td>2</td>
-                  <td>Irfan</td>
+                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">COMING SOON</a></td>
+                  <td>-</td>
+                  <td>-</td>
                </tr>
             </table>
          </div>
