--- a/Project/intermediate.html
+++ b/Project/intermediate.html
@@ -117,11 +117,11 @@
                </tr>
                <tr>
                   <td>09:30 - 10:30</td>
-                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">Cross-Origin Resource Sharing</a></td>
+                  <td>Cross-Origin Resource Sharing</td>
                   <td>1</td>
                   <td>Irfan</td>
                   <td>10:30 - 11:30</td>
-                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">WebSockets</a></td>
+                  <td>WebSockets</td>
                   <td>1</td>
                   <td>Irfan</td>
                </tr>
@@ -143,7 +143,7 @@
                </tr>
                <tr>
                   <td>09:00 - 11:00</td>
-                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">COMING SOON</a></td>
+                  <td>COMING SOON</td>
                   <td>-</td>
                   <td>-</td>
                </tr>
@@ -165,7 +165,7 @@
                </tr>
                <tr>
                   <td>09:00 - 11:00</td>
-                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">COMING SOON</a></td>
+                  <td>COMING SOON</td>
                   <td>-</td>
                   <td>-</td>
                </tr>
@@ -187,7 +187,7 @@
                </tr>
                <tr>
                   <td>09:00 - 11:00</td>
-                  <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">COMING SOON</a></td>
+                  <td>COMING SOON</td>
                   <td>-</td>
                   <td>-</td>
                </tr>
