--- a/Project/intermediate.html
+++ b/Project/intermediate.html
@@ -116,7 +116,7 @@
                   <th>Speaker</th>
                </tr>
                <tr>
-                  <td>09:30 - 10:30</td>
+                  <td>09:30 - 10:30 (11 March 2023)</td>
                   <td>Cross-Origin Resource Sharing</td>
                   <td>1</td>
                   <td>Irfan</td>
@@ -144,7 +144,7 @@
                   <th>Speaker</th>
                </tr>
                <tr>
-                  <td>09:00 - 11:00</td>
+                  <td>-</td>
                   <td>COMING SOON</td>
                   <td>-</td>
                   <td>-</td>
@@ -166,7 +166,7 @@
                   <th>Speaker</th>
                </tr>
                <tr>
-                  <td>09:00 - 11:00</td>
+                  <td>-</td>
                   <td>COMING SOON</td>
                   <td>-</td>
                   <td>-</td>
@@ -188,7 +188,7 @@
                   <th>Speaker</th>
                </tr>
                <tr>
-                  <td>09:00 - 11:00</td>
+                  <td>-</td>
                   <td>COMING SOON</td>
                   <td>-</td>
                   <td>-</td>
