--- a/Project/intermediate.html
+++ b/Project/intermediate.html
@@ -110,13 +110,13 @@
             <h3 id="week-1">Week 2</h3>
             <table>
                <tr>
-                  <th>Time</th>
+                  <th>Time (11 March 2023)</th>
                   <th>Activity</th>
                   <th>Credit Hour</th>
                   <th>Speaker</th>
                </tr>
                <tr>
-                  <td>09:30 - 10:30 (11 March 2023)</td>
+                  <td>09:30 - 10:30</td>
                   <td>Cross-Origin Resource Sharing</td>
                   <td>1</td>
                   <td>Irfan</td>
