--- a/Project/intermediate.html
+++ b/Project/intermediate.html
@@ -88,7 +88,7 @@
             <h3 id="week-1">Week 1</h3>
             <table>
                <tr>
-                  <th>Time</th>
+                  <th>Time (4 March 2023)</th>
                   <th>Activity</th>
                   <th>Credit Hour</th>
                   <th>Speaker</th>
