--- a/Project/intermediate.html
+++ b/Project/intermediate.html
@@ -138,16 +138,22 @@
             <h3 id="week-1">Week 3</h3>
             <table>
                <tr>
-                  <th>Time</th>
+                  <th>Time (19 March 2023)</th>
                   <th>Activity</th>
                   <th>Credit Hour</th>
                   <th>Speaker</th>
                </tr>
                <tr>
-                  <td>-</td>
-                  <td>COMING SOON</td>
-                  <td>-</td>
-                  <td>-</td>
+                  <td>09:30 - 10:30</td>
+                  <td>Recap Previous Workshop</td>
+                  <td>1</td>
+                  <td>Naqib</td>
+               </tr>
+               <tr>
+                  <td>10:30 - 11:30</td>
+                  <td>SQL Injection (Advanced)</td>
+                  <td>1</td>
+                  <td>Naqib</td>
                </tr>
             </table>
          </div>
