--- a/Project/intermediate.html
+++ b/Project/intermediate.html
@@ -107,7 +107,7 @@
       <!-- Week 2 -->
       <section id="week 2">
          <div class="col-12 p-4">
-            <h3 id="week-1">Week 2</h3>
+            <h3 id="week-2">Week 2</h3>
             <table>
                <tr>
                   <th>Time (11 March 2023)</th>
@@ -135,7 +135,7 @@
       <!-- Week 3 -->
       <section id="week 3">
          <div class="col-12 p-4">
-            <h3 id="week-1">Week 3</h3>
+            <h3 id="week-3">Week 3</h3>
             <table>
                <tr>
                   <th>Time (19 March 2023)</th>
@@ -163,46 +163,24 @@
       <!-- Week 4 -->
       <section id="week 4">
          <div class="col-12 p-4">
-            <h3 id="week-1">Week 4</h3>
+            <h3 id="week-4">Week 4</h3>
             <table>
                <tr>
-                  <th>Time</th>
+                  <th>Time (25 March 2023)</th>
                   <th>Activity</th>
                   <th>Credit Hour</th>
                   <th>Speaker</th>
                </tr>
                <tr>
-                  <td>-</td>
-                  <td>COMING SOON</td>
-                  <td>-</td>
-                  <td>-</td>
+                  <td>11:00 - 01:00</td>
+                  <td>Authentication</td>
+                  <td>2</td>
+                  <td>Irfan</td>
                </tr>
             </table>
          </div>
       </section>
       <!-- End Week 4 -->
-
-      <!-- Week 5 -->
-      <section id="week 5">
-         <div class="col-12 p-4">
-            <h3 id="week-1">Week 5</h3>
-            <table>
-               <tr>
-                  <th>Time</th>
-                  <th>Activity</th>
-                  <th>Credit Hour</th>
-                  <th>Speaker</th>
-               </tr>
-               <tr>
-                  <td>-</td>
-                  <td>COMING SOON</td>
-                  <td>-</td>
-                  <td>-</td>
-               </tr>
-            </table>
-         </div>
-      </section>
-      <!-- End Week 5 -->
 
       <!-- Footer -->
       <footer>
