--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   <div class="portfolio-overlay">
                      <div>
                         <h3>Jom Belajar Hack (Intermediate)</h3>
-                        <h6>Start at 4th March 2023</h6>
+                        <h6>Completed</h6>
                      </div>
                   </div>
                </a>
