--- a/Project/intro.html
+++ b/Project/intro.html
@@ -56,6 +56,10 @@
          </div>
          <div class="row">
          <div class="col-12 p-4">
+            <p>Start, switch or advance your career in cybersecurity</p>
+         </div>
+         <div class="row">
+         <div class="col-12 p-4">
             <h4 class="title-sm mt-4">Before you start</h4>
             <p>WARNIING: we don't take responsibilities if anything happen</p>
             <p>If you're new to information security, forget everything you know about hacking</p>
