--- a/Project/intro.html
+++ b/Project/intro.html
@@ -56,19 +56,17 @@
          </div>
          <div class="row">
          <div class="col-12 p-4">
-            <p>Start, switch or advance your career in cybersecurity</p>
+            <p>In today's digital age, cybersecurity has become increasingly important as more and more sensitive information is stored online and as cyber attacks become more sophisticated. 
+            It is critical for individuals, businesses, and governments to take proactive steps to protect their digital assets and prevent cyber attacks.</p>
          </div>
          <div class="row">
          <div class="col-12 p-4">
             <h4 class="title-sm mt-4">Before you start</h4>
-            <p>WARNIING: we don't take responsibilities if anything happen</p>
-            <p>If you're new to information security, forget everything you know about hacking</p>
-            <p>Dont start using tools without reading about pen testing and how it works</p>
-            <p>Don't download or use tools if you haven't audited its code</p>
-            <p>Don't use these tools to do stupid things without consent on your friends or worst, your recruiter</p>
-            <p>Read books, manuals, articles, be curious and not just a <a href="https://en.wikipedia.org/wiki/Script_kiddie">script kiddie</a>.</p>
-            <p>I wish you don't use these tools for illegal purposes, but if you do, I hope you know what you're doing</p>
-            <p>Practice using chalenges, not real targets!</p>
+            <p>Before delving into the world of cybersecurity, it's essential to understand that it's not a game. It's not just about using fancy tools to hack into systems or get access to sensitive information. 
+            It's about protecting digital assets and preventing malicious attacks.</p>
+            <p>If you're new to information security, forget everything you know about hacking. Don't start using tools without reading about pen testing and how it works. Don't download or use tools if you haven't audited their code. 
+            Don't use these tools to do stupid things without consent on your friends or worst, your recruiter. 
+            Read books, manuals, articles, be curious, and not just a script kiddie. And, most importantly, practice using challenges, not real targets!</p>
          </div>
          <div class="row">
          <div class="col-12 p-4">
