--- a/Project/intro.html
+++ b/Project/intro.html
@@ -79,11 +79,12 @@
          <div class="row">
          <div class="col-12 p-4">
             <h4 class="title-sm mt-4">Why is cybersecurity important?</h4>
-            <p>Protection of sensitive information</p>
-            <p>Prevention of cyber attacks</p>
-            <p>Compliance with regulations</p>
-            <p>Business continuity</p>
-            <p>Protection of national security</p>
+            <p>There are several reasons why cybersecurity is essential:</p>
+            <p>Protection of sensitive information: Cybersecurity is critical for protecting sensitive information such as personal data, financial information, and intellectual property.</p>
+            <p>Prevention of cyber attacks: Cyber attacks can cause significant financial and reputational damage to individuals, businesses, and governments. Cybersecurity measures can help prevent these attacks from occurring.</p>
+            <p>Compliance with regulations: Many industries are subject to regulations and standards that require them to maintain a certain level of cybersecurity. Compliance with these regulations is essential to avoid penalties and fines.</p>
+            <p>Business continuity: Cyber attacks can disrupt business operations, causing significant downtime and financial loss. Cybersecurity measures can help ensure business continuity.</p>
+            <p>Protection of national security: Cyber attacks can also pose a threat to national security, as they can be used to disrupt critical infrastructure and government operations.</p>
          </div>
          <div class="row">
          <div class="col-12 p-4">
