--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
          <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
                <img src="img/p2.png" alt="">
+               <a href="https://www.youtube.com/channel/UCO3Igu24eoh3raBoBA7laPg">
                <div class="portfolio-overlay">
                   <div>
-                     <h3>Sharing Circles</h3>
-                     <h6>COMING SOON</h6>
+                     <h3>Tech Podcast</h3>
+                     <h6>LEARN NOW</h6>
                   </div>
                </div>
             </div>
