--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                   </div>
                </div>
             </div>
+            </a>
          </div>
          <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
@@ -195,11 +196,11 @@
                   <div>
                      <h5 class="title-sm">2023</h5>
                      <p>Jom Belajar Hack (Intermediate)</p>
-                     <p>Sharing Circles</p>
+                     <p>Tech Podcast</p>
                      <p>Jom Belajar CTF</p>
                      <p>Mentoring Mondays</p>
                      <p>3108 CTF</p>
-                     <p>School of Security</p>
+                     <p>Jom Belajar Python (Beginner)</p>
                      <p>Jom Belajar Hack (Beginner)</p>
                      <p>Fight the Phish</p>
                   </div>
@@ -211,11 +212,11 @@
                   <div>
                      <h5 class="title-sm">2024</h5>
                      <p>Jom Belajar Hack (Intermediate)</p>
-                     <p>Sharing Circles</p>
+                     <p>Tech Podcast</p>
                      <p>Jom Belajar CTF</p>
                      <p>Mentoring Mondays</p>
                      <p>3108 CTF</p>
-                     <p>School of Security</p>
+                     <p>Jom Belajar Python (Beginner)</p>
                      <p>Jom Belajar Hack (Beginner)</p>
                      <p>Fight the Phish</p>
                   </div>
