--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                <img src="img/p6.png" alt="">
                <div class="portfolio-overlay">
                   <div>
-                     <h3>School of Security</h3>
+                     <h3>Jom Belajar Python (Beginner)</h3>
                      <h6>COMING SOON</h6>
                   </div>
                </div>
