--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
          </div>
          <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
-               <img src="img/p6.mp4" alt="">
+               <img src="img/p6.png" alt="">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Jom Belajar Python (Beginner)</h3>
