--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
          <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
                <img src="img/p3.png" alt="">
-               <a href="Project/ctf.html">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Jom Belajar CTF</h3>
@@ -126,10 +125,11 @@
          <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
                <img src="img/p5.png" alt="">
+               <a href="Project/ctf.html"></a>
                <div class="portfolio-overlay">
                   <div>
                      <h3>3108 CTF</h3>
-                     <h6>COMING SOON</h6>
+                     <h6>MORE DETAILS</h6>
                   </div>
                </div>
             </div>
