--- a/index.html
+++ b/index.html
@@ -103,12 +103,14 @@
          <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
                <img src="img/p3.png" alt="">
+               <a href="Project/ctf.html">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Jom Belajar CTF</h3>
                      <h6>MORE DETAILS</h6>
                   </div>
                </div>
+               </a>
             </div>
          </div>
          <div class="col-lg-4 col-sm-6">
