--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
          <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
                <img src="img/p3.png" alt="">
-               <a href="Project/ctf.html">
+               <a href="Project/jbc.html">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Jom Belajar CTF</h3>
@@ -116,12 +116,14 @@
          <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
                <img src="img/p4.png" alt="">
+               <a href="Project/mm.html">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Mentoring Mondays</h3>
                      <h6>COMING SOON</h6>
                   </div>
                </div>
+               </a>
             </div>
          </div>
          <div class="col-lg-4 col-sm-6">
