--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                <div class="portfolio-overlay">
                   <div>
                      <h3>Mentoring Mondays</h3>
-                     <h6>COMING SOON</h6>
+                     <h6>MORE DETAILS</h6>
                   </div>
                </div>
                </a>
