--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       <ul class="nav nav-pills justify-content-center mb-3" id="pills-tab" role="tablist">
       <li class="nav-item" role="presentation">
       <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">
-      <img src="img/team5.jpeg" alt="">
+      <img src="img/testimonial1.jpeg" alt="">
       </button>
       </li>
       <li class="nav-item" role="presentation">
