--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   <div class="portfolio-overlay">
                      <div>
                         <h3>Breaking Into Cybersecurity Without Any Experience</h3>
-                        <h6>LEARN NOW</h6>
+                        <h6>COMING SOON</h6>
                      </div>
                   </div>
             </div>
